deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-__GIT_COMMIT__
  labels:
    name: myapp-__GIT_COMMIT__
  namespace: __GIT_COMMIT__
spec:
  selector:
    matchLabels:
      name: myapp-__GIT_COMMIT__
  template:
    metadata:
      labels:
        name: myapp-__GIT_COMMIT__
    spec:
      containers:
        - name: myapp-__GIT_COMMIT__
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "DEPLAT=`date +%m%d%Y%H%M%S`; sed -i -e 's/__deployed_at__/\"'$DEPLAT'\"/g' /usr/src/app/index.js"]
          image: 1ndonlydj/orangebitsindia
          imagePullPolicy: Always
          ports:
            - containerPort: 5007
      imagePullSecrets:
       - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  labels:
    name: myapp-__GIT_COMMIT__
  name: myapp-__GIT_COMMIT__
  namespace: __GIT_COMMIT__
spec:
  type: ClusterIP
  ports:
    - name: http
#      protocol: TCP
      port: 80
      targetPort: 5007
    - name: https
      port: 443
      targetPort: 5007
  selector:
    name: myapp-__GIT_COMMIT__
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __GIT_COMMIT__-ingress
  namespace: __GIT_COMMIT__
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: __GIT_COMMIT__.assessment.orangebitsindia.com
    http:
      paths:
      - path: /__GIT_COMMIT__
        pathType: ImplementationSpecific
        backend:
          service:
            name: myapp-__GIT_COMMIT__
            port:
              number: 80
